--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,6 @@
 h1. FORMTASTIC.TMBUNDLE
 
-A TextMate-bundle for the awesome Rails form builder extension "Formtastic". With this set of shortcuts/snippets, even more productive!
+A TextMate-bundle for the awesome Rails form builder extension "Formtastic". With this set of shortcuts/snippets even more productive!
 
 h2. What is Formtastic?
 
@@ -9,8 +9,8 @@ http://github.com/justinfrench/formtastic
 h2. Install this TextMate-bundle...
 
 <pre>mkdir -p ~/Library/Application\ Support/TextMate/Bundles
-  cd ~/Library/Application\ Support/TextMate/Bundles
-  git clone git://github.com/grimen/formtastic_tmbundle.git 'Formtastic.tmbundle'
-  osascript -e 'tell app "TextMate" to reload bundles'</pre>
+cd ~/Library/Application\ Support/TextMate/Bundles
+git clone git://github.com/grimen/formtastic_tmbundle.git 'Formtastic.tmbundle'
+osascript -e 'tell app "TextMate" to reload bundles'</pre>
 
 Copyright© 2009 Jonas Grimfelt, released under MIT-license
