--- a/README.textile
+++ b/README.textile
@@ -8,9 +8,13 @@ h2. What is Formtastic?
 
 h2. Install this TextMate-bundle...
 
-<pre>mkdir -p ~/Library/Application\ Support/TextMate/Bundles
+<pre>
+mkdir -p ~/Library/Application\ Support/TextMate/Bundles
 cd ~/Library/Application\ Support/TextMate/Bundles
 git clone git://github.com/grimen/formtastic_tmbundle.git 'Formtastic.tmbundle'
-osascript -e 'tell app "TextMate" to reload bundles'</pre>
+osascript -e 'tell app "TextMate" to reload bundles'
+</pre>
 
-Copyright© 2009 Jonas Grimfelt, released under MIT-license
+h2. License
+
+Copyright© 2009 Jonas Grimfelt, released under MIT-license.
